--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace; /* Fuente de estilo código */
+    background-color: #FEF9E7; /* Color crema para el fondo */
+    color: #333; /* Color de texto oscuro para buen contraste */
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  #root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+  
+  main {
+    margin-top: 4rem; /* Ajusta según la altura del header */
+    padding: 2rem;
+    background-color: #FEF9E7; /* Fondo blanco para el contenido */
+    box-sizing: border-box;
+    flex: 1;
   }
-}
+  
+  
+  
