--- a/src/components/Mosaic/Mosaic.css
+++ b/src/components/Mosaic/Mosaic.css
@@ -1,6 +1,6 @@
 .projects-section {
     padding: 2rem;
-    background-color: #FEF9E7; /* Fondo crema para el contenido */
+    background-color: #FFF; /* Fondo crema para el contenido */
   }
   
   .projects-grid {
