--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,23 @@
-
 html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace; /* Fuente de estilo código */
-    background-color: #FEF9E7; /* Color crema para el fondo */
-    color: #333; /* Color de texto oscuro para buen contraste */
-  }
-  
-  #root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  main {
-    margin-top: 4rem; /* Ajusta según la altura del header */
-    padding: 2rem;
-    background-color: #FEF9E7; /* Fondo blanco para el contenido */
-    box-sizing: border-box;
-    flex: 1;
-  }
-  
-  
-  
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: white;
+  color: #333;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  margin-top: 4rem;
+  padding: 2rem;
+  background-color: white;
+  box-sizing: border-box;
+  flex: 1;
+}
